bk_ida/sjengida/c1/see
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/see/src/see.c:707:17: error: use of undeclared identifier 'dword_661668'
v18 = -material[dword_661668[32 * v16 + 2 * v17]]; 
                ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/see/src/see.c:709:16: error: use of undeclared identifier 'dword_661668'
v18 = material[dword_661668[32 * ( unsigned __int64)( v12 == 0) + 2 * v17]]; 
               ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/see/src/obj/see.o] Error 1
